@@ -75,6 +75,7 @@ Broker:
   version.
 - Add -q option to allow logging to be disabled at the command line.
 - Add suport for PROXY protocol v1 and v2.
+- Log message if a client attempts to connect with TLS to a non-TLS listener.
 
 Plugins / plugin interface:
 - Add persist-sqlite plugin.
